<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".CreatePoll" >

    <TableLayout
        android:id="@+id/TableLayout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/linearLayout1"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true" >

        <TableRow
            android:id="@+id/tableRow1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/title_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/create_poll_title_label"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <EditText
                android:id="@+id/create_poll_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="textCapWords" >

                <requestFocus />
            </EditText>
        </TableRow>

        <TableRow
            android:id="@+id/tableRow2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/desc_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|center_horizontal"
                android:text="@string/create_poll_desc_label"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <EditText
                android:id="@+id/create_poll_desc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="textMultiLine" />

        </TableRow>

        <TableRow
            android:id="@+id/tableRow3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/voters_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/create_poll_voters_label"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <Button
                    android:id="@+id/create_poll_edit_voter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/create_poll_edit_voter_label" />
            </LinearLayout>

            <ListView
                android:id="@+id/create_poll_voter_list"
                android:layout_width="match_parent"
                android:layout_height="fill_parent" >
            </ListView>

            <TextView
                android:id="@+id/create_poll_voter_empty"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/create_poll_voters_empty"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:visibility="gone" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/talliers_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/create_poll_talliers_label"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <Button
                    android:id="@+id/create_poll_edit_tallier"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/create_poll_edit_tallier_label" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:orientation="vertical" >

                <CheckBox
                    android:id="@+id/create_poll_tallier_same"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:checked="true"
                    android:text="@string/create_poll_talliers_same_label" />

                <ListView
                    android:id="@+id/create_poll_tallier_list"
                    android:layout_width="match_parent"
                    android:layout_height="fill_parent"
                    android:visibility="gone" >
                </ListView>

                <TextView
                    android:id="@+id/create_poll_tallier_empty"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:text="@string/create_poll_talliers_empty"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:visibility="gone" />
            </LinearLayout>
        </TableRow>
    </TableLayout>

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" >

        <Button
            android:id="@+id/create_poll_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@android:string/cancel" />

        <Button
            android:id="@+id/create_poll_ok"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@android:string/ok" />
    </LinearLayout>

</RelativeLayout>